--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,20 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#ff8300"
     tools:context="com.example.big.zxingandroid.MainActivity">
 
-    <Button
-        android:id="@+id/btn_click"
-        android:layout_width="28dp"
-        android:layout_height="28dp"
-        android:layout_marginLeft="6dp"
-        android:background="@drawable/scan_btn"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/tv_result"/>
+    <com.ogaclejapan.smarttablayout.SmartTabLayout
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/viewpagertab"
+        android:layout_width="match_parent"
+        android:layout_height="90dp"
+        app:stl_indicatorInFront="false"
+        app:stl_indicatorGravity="bottom"
+        app:stl_indicatorInterpolation="linear"
+        app:stl_indicatorColor="#ffff"
+        app:stl_indicatorThickness="6dp"
+        app:stl_indicatorCornerRadius="2dp"
+        app:stl_underlineColor="#00000000"
+        app:stl_dividerColor="#00000000"
+        app:stl_indicatorWidth="auto"
+        app:stl_dividerThickness="1dp"
+        app:stl_defaultTabTextColor="#FC000000"
+        app:stl_distributeEvenly="true"/>
+    <com.example.big.zxingandroid.CustomSwipableViewPager
+        android:id="@+id/viewpager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/viewpagertab"
+        />
 
-</LinearLayout>
+</RelativeLayout>
