--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,7 @@
         app:stl_dividerThickness="1dp"
         app:stl_defaultTabTextColor="#FC000000"
         app:stl_distributeEvenly="true"/>
-    <com.example.big.zxingandroid.CustomSwipableViewPager
+    <com.example.big.zxingandroid.CustomSwipeAbleViewPager
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
