--- a/app/src/main/res/layout/fragment_barcode.xml
+++ b/app/src/main/res/layout/fragment_barcode.xml
@@ -19,6 +19,7 @@
       android:id="@+id/item_title"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
+      android:textColor="@color/zxing_custom_viewfinder_laser"
       android:textSize="80sp"
       />
 </LinearLayout>
