--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,14 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ff8300"
+    android:background="@color/wallet_orange"
+    android:paddingTop="30dp"
     tools:context="com.example.big.zxingandroid.MainActivity">
 
     <com.ogaclejapan.smarttablayout.SmartTabLayout
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/viewpagertab"
         android:layout_width="match_parent"
-        android:layout_height="90dp"
+        android:layout_height="75dp"
         app:stl_indicatorInFront="false"
         app:stl_indicatorGravity="bottom"
         app:stl_indicatorInterpolation="linear"
