--- a/app/src/main/res/layout/custom_header_tab.xml
+++ b/app/src/main/res/layout/custom_header_tab.xml
@@ -7,11 +7,11 @@
     android:gravity="center">
     <com.example.big.zxingandroid.view.TintableImageView
         android:id="@+id/customHeaderTabIcon"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_marginTop="10dp"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
         android:layout_gravity="center_horizontal"
-        android:scaleType="fitCenter"
-        android:src="@drawable/ic_scan" />
+        android:scaleType="fitCenter"/>
     <TextView
         android:id="@+id/customHeaderTabTitle"
         android:layout_width="wrap_content"
