--- a/app/src/main/res/layout/scan_view.xml
+++ b/app/src/main/res/layout/scan_view.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
-       xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    >
 
     <com.journeyapps.barcodescanner.BarcodeView
         android:id="@+id/zxing_barcode_surface"
@@ -28,4 +30,126 @@
         app:zxing_result_view="@color/zxing_viewfinder_laser"
         app:zxing_viewfinder_laser="@color/zxing_viewfinder_laser"
         app:zxing_viewfinder_mask="@color/zxing_viewfinder_mask"/>
+    <LinearLayout
+        android:id="@+id/headerView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:background="#66000000"
+        android:baselineAligned="false"
+        android:orientation="horizontal"
+        android:paddingTop="30dp">
+
+        <LinearLayout
+            android:id="@+id/btnLinearFundin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center_horizontal"
+            android:orientation="vertical"
+            android:paddingBottom="16dp"
+            android:paddingTop="8dp">
+
+            <ImageView
+                android:id="@+id/btnImageFundin"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:contentDescription="@null"
+                android:scaleType="fitCenter"
+                android:src="@drawable/ic_topup_old"/>
+
+            <TextView
+                android:id="@+id/btnTextFundin"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="8dp"
+                android:textColor="#ffff"
+                android:text="Page 1"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/btnLinearTransfer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center_horizontal"
+            android:orientation="vertical"
+            android:paddingBottom="16dp"
+            android:paddingTop="8dp">
+
+            <ImageView
+                android:id="@+id/btnImageTransfer"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:contentDescription="@null"
+                android:scaleType="fitCenter"
+                android:src="@drawable/ic_transfer_old"/>
+
+            <TextView
+                android:id="@+id/btnTextTransfer"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="8dp"
+                android:textColor="#ffff"
+                android:text="Page 2"/>
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/btnLinearPay"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center_horizontal"
+            android:orientation="vertical"
+            android:paddingBottom="16dp"
+            android:paddingTop="8dp">
+
+            <ImageView
+                android:id="@+id/btnImagePay"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:contentDescription="@null"
+                android:scaleType="fitCenter"
+                android:src="@drawable/ic_pay_old"/>
+
+            <TextView
+                android:id="@+id/btnTextPay"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="8dp"
+                android:textColor="#ffff"
+                android:text="Page 3"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/btnLinearScan"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:layout_weight="1"
+            android:gravity="center_horizontal"
+            android:orientation="vertical"
+            android:paddingBottom="16dp"
+            android:paddingTop="8dp">
+
+            <ImageView
+                android:id="@+id/btnImageScan"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:contentDescription="@null"
+                android:scaleType="fitCenter"
+                android:src="@drawable/ic_scan_old"/>
+
+            <TextView
+                android:id="@+id/btnTextScan"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="8dp"
+                android:textColor="#ffff"
+                android:text="Page 4"/>
+        </LinearLayout>
+    </LinearLayout>
 </merge>
